# pi_hal

./: Cargo.toml  README.md
.cargo/: config.toml
js/: utils.js
shader/: glyphy.fs  glyphy.vs
src/: image.rs  lib.rs  loader.rs  runtime.rs  texture.rs
src/font/: bitmap_table.rs  blur.rs  brush.rs  font.rs  mod.rs  sdf2_table.rs  sdf_brush.rs  sdf_gpu.rs  sdf_table.rs  tables.rs  text_pack.rs  text_split.rs
src/hal/: mod.rs
src/hal/native/: compressed_texture.rs  file.rs  font_brush copy.rs  font_brush.rs  image.rs  image_texture_load.rs  mod.rs  runtime.rs  sdf2_info.rs  stroe.rs  svg.rs
src/hal/web/: file.rs  font_brush.rs  image.rs  image_texture_load.rs  mod.rs  runtime.rs  sdf2_info.rs  stroe.rs  svg.rs  web_local.rs
