[package]
name = "pi_hal"
version = "0.1.0"
edition = "2021"
authors = ["yineng <yineng@gmail.com>"]
description = "Front end cross platform packaging"
repository = "https://github.com/GaiaWorld/pi_hal.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "hal"]

[dependencies]
# pi_share = {version="0.4", features=["serial"]}
# pi_async = {version="0.5", features=["serial"]}
image = "0.24"
pi_assets = "0.11"
pi_atom = "0.2"
pi_share = "0.4"
pi_async = "0.5"
pi_futures = "0.1"
pi_hash = "0.1"
pi_slotmap = {version= "0.1", features = ["serde"]}
pi_ucd="0.1"
ordered-float="3.0"
# 回滚到0.30, 0.31安卓pi_app 编不过
nalgebra = "0.32"
lazy_static = "1.4"
num_cpus = "1.13"
log = "0.4"
serde = { version = "1.0", features = ["derive"], option=true }
derive_deref = "1.1"
async-trait = "0.1"
parking_lot = "0.12"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = [
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"Document", 
	"Window",
	"ImageData"
]}
js-sys = "0.3"
# basis-universal = { path = "F:/project/rust_crates/basis-universal"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
font_kit = {git="http://ser.yinengyun.com:10082/tech/font_kit.git"}



[features]
empty=[]

