[package]
name = "pi_hal"
version = "0.1.25"
edition = "2021"
authors = ["yineng <yineng@gmail.com>"]
description = "Front end cross platform packaging"
repository = "https://github.com/GaiaWorld/pi_hal.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "hal"]

[dependencies]
pi_time = "0.3"
# pi_share = {version="0.4", features=["serial"]}
smallvec = { version = "1.8", features = ["serde"] }
image = "0.24"
pi_assets = "0.13"
pi_atom = "0.5"
pi_share = "0.4"
pi-async-rt = "0.1.10"
# pi-async-rt = {version="0.1", features=["serial"]}
pi_futures = "0.1"
pi_hash = "0.1"
pi_slotmap = {version= "0.1", features = ["serde"]}
pi_ucd="0.1"
pi_null="0.1"
ordered-float="3.0"
# 回滚到0.30, 0.31安卓pi_app 编不过
nalgebra = "0.32"
lazy_static = "1.4"
num_cpus = "1.16"
log = "0.4"
serde = { version = "1.0", features = ["derive"], option=true }
derive_deref = "1.1"
async-trait = "0.1"
parking_lot = "0.12"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = [
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"Document", 
	"Window",
	"ImageData"
]}
js-sys = "0.3"
pi_sdf = {version = "0.1", registry = "yn"}
# basis-universal = { path = "F:/project/rust_crates/basis-universal"}
ahash = "0.8"
buddy-alloc = "0.5"
parry2d = "0.13"
guillotiere = { version = "0.6" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
font_kit = { registry = "yn", version = "0.1" }



[features]
empty=[]
single_thread = [] # 本地平台，设置该feature有效，运行时为单线程运行时
web_local_load = []

[patch.yn]
pi_sdf = {path="../pi_sdf"}


